<resources>
    <string name="app_name">Clads</string>
    <string name="email_sign_up_login_tag_line"> Lorem ipsum. ipsum sum</string>
    <string name="splash_screen_loading_text">Loading...</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_screen_welcome_back">Welcome back</string>
    <string name="fragment_login_screen_login_to_continue">Login to continue</string>
    <string name="fragment_login_screen_email_address">Email Address</string>
    <string name="fragment_login_screen_password">Password</string>
    <string name="fragment_login_screen_login"><b>Login</b></string>
    <string name="fragment_login_screen_new_user">New User? SignUp for free</string>
    <string name="fragment_login_screen_signup_for_free">SignUp for free</string>
    <string name="fragment_login_screen_forgot_password">Forgot Password?</string>
    <string name="fragment_login_screen_login_with_google">Sign in with Google</string>
    <string name="sign_up_login_tag_line"> Lorem ipsum, ipsum sum</string>
    <string name="all_placeholder_text">Hello blank fragment</string>
    <string name="email_sign_up_fragment_create_acount_text">Create an account</string>
    <string name="email_sign_up_fragment_lets_get_to_know_you_text">Lets get to know you</string>
    <string name="view_in_browser">view in browser</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="prompt_message">Hey Ijeoma, you are almost ready to start <br /> enjoying Obioma. Simply click the big blue<br />button below to verify your email address.</string>
    <string name="email_sign_up_fragment_create_account_text">Create an account</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="stay_in_touch">Stay in touch</string>
    <string name="email_sent_by">email sent by Clads</string>
    <string name="copyright">copyright 2020. All Rights Reserved</string>
    <string name="social_media">Social Media Link</string>
    <string name="email_sign_up_fragment_firstname_hint_text">First Name</string>
    <string name="email_sign_up_fragment_lastname_hint_text">Last Name</string>
    <string name="email_sign_up_fragment_other_name_hint_text">Other Name</string>
    <string name="email_sign_up_fragment_email_address_hint_text">Email Address</string>
    <string name="email_sign_up_fragment_password_hint_text">Password</string>
    <string name="email_sign_up_fragment_confirm_password_hint_text">Confirm Password</string>
    <string name="email_sign_up_fragment_sign_up_button_text">Sign Up</string>
    <string name="email_sign_up_fragment_already_have_an_account_text">Have an Account? </string>
    <string name="email_sign_up_fragment_login_textview_text">Login </string>
    <string name="email_sign_up_fragment_choose_account_category_text">Choose account category </string>
    <string name="all_tailor">Tailor</string>
    <string name="sign_up_email_edit_texts__error_message">Field must not be empty</string>
    <string name="sign_up_email_confirm_password__error_message">Passwords do not match</string>
    <string name="signup_choices_fragment_signup_with_google">Signup with Google</string>
    <string name="signup_choices_fragment_sign_up_with_email">Sign up with email</string>
    <string name="signup_choices_fragment_sign_up_with_phone_number">Sign up with phone number</string>
    <string name="signup_choices_fragment_login">Login</string>
    <string name="signup_choices_fragment_a_logo_of_the_app">A logo of the app</string>
    <string name="signup_login_fragment_sign_up">Sign up</string>
    <string name="Field_is_empty_or_invalid_name_format_entered">Field is empty or invalid name format entered</string>
    <string name="Field_is_empty_or_Invalid_email_address_entered">Field is empty or Invalid email address entered</string>
    <string name="Select_an_account_type">Select_an_account_type</string>
    <string name="Password_must_not_be_less_than_6_characters">Password must not be less than 6 characters</string>
    <string name="Passwords_do_not_match">Passwords do not match</string>
    <string name="phone_number">08168105123</string>
    <string name="role">Tailor</string>
    <string name="country">Nigeria</string>
    <string name="gender">male</string>
    <string-array name="email_sign_up_fragment_choose_account_category_array">
        <item>Tailor</item>
        <item>Weaver</item>
        <item>Client</item>
    </string-array>
    <string name="sign_up_email_title">Create an account</string>
    <string name="sign_up_email_description">Lets get to know you</string>
    <string name="sign_up_email_first_name">First Name</string>
    <string name="sign_up_email_last_name">Last Name</string>
    <string name="sign_up_email_other_name">Other Name</string>
    <string name="sign_up_email_email_address">Email Address</string>
    <string name="sign_up_email_password">Password</string>
    <string name="sign_up_email_confirm_password">Confirm Password</string>
    <string name="splash_screen_placeholder_text">Splash Screen</string>
    <string name="fragment_signup_choices_button_text">Signup with Google</string>
    <string name="signup_login_fragment_signup_button">Sign Up</string>
    <string name="reset_password_fragment_view_in_browser">view in browser</string>
    <string name="all_reset_password">Reset Password</string>
    <string name="reset_password_fragment_click_reset_button">Hi,<br /> You’re almost there. To finish resetting your password, please click on the  reset button below</string>
    <string name="reset_password_fragment_stay_in_touch">stay in touch</string>
    <string name="reset_password_fragment_email_sent_by_clads">email sent by clads</string>
    <string name="reset_password_fragment_copyright_text">copyright 2020. All Rights Reserved</string>
    <string name="all_forgot_password">Forgot Password</string>
    <string name="all_email_address">Email Address</string>
    <string name="forgot_password_fragment_send_request_password_link">Send Request Password Link</string>
    <string name="all_i_can_remember_my_password">I can remember my password,</string>
    <string name="all_login">Login</string>
    <string name="reset_password_verification_fragment_new_password">New Password</string>
    <string name="reset_password_verification_fragment_confirm_new_password">Confirm New Password</string>
    <string name="there_are_no_measurements_for_this_client">There are no measurements for this client</string>
    <string name="measurement_value_default">12</string>
    <string name="measurement">Measurement</string>
    <string name="add_address">Add Address</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="name">Name</string>
    <string name="full_length">Full length</string>
    <string name="_1411">1411</string>
    <string name="measurement_name">Measurement Name</string>
    <string-array name="states_array">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa-Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>Taraba</item>
        <item>FCT/Abuja</item>
    </string-array>
    <string name="fragment_clients_list_you_have_not_added_client_yet_text">You have not added client yet</string>
    <string name="fragment_client_account_name_edit_text_hint">Name</string>
    <string name="fragment_client_account_phone_number_edit_text_hint">Phone Number</string>
    <string name="fragment_client_account_email_address_edit_text_hint">Email Address</string>
    <string name="fragment_clients_list_recyclerview_layout_circular_image_text">ab</string>
    <string name="fragment_clients_list_recyclerview_layout_first_name_text">FirstName</string>
    <string name="fragment_clients_list_recyclerview_layout_last_name_text">LastName</string>
    <string name="fragment_clients_list_recyclerview_layout_location_text">Lagos</string>
    <string name="client_account">Client Account</string>
    <string name="add_client">Add Client</string>
    <string name="measurements">Measurement</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="fragment_tablayout_account_name_edit_text">Name</string>
    <string name="fragment_tablayout_client_account_phone_number_edit_text">Phone Number</string>
    <string name="fragment_tablayout_client_account_email_address_hint_edit_text">Email Address</string>
    <string name="fragment_tablayout_client_account_gender_text_view">Gender</string>
    <string name="fragment_tablayout_client_account_male_hint_radio_button_text">Male</string>
    <string name="fragment_client_account_radion_female_text">Female</string>
    <string name="fragment_client_account_delivery_address_hint_text_edit_text">Delivery Address</string>
    <string name="fragment_client_account_next_button_text">Next</string>
    <string name="fragment_clients_list_you_have_not_added_client_yet_text_view">You have not added client yet</string>
    <string name="all_edit_profile_text">Edit Profile</string>
    <string name="edit_profile_account_text">Account</string>
    <string name="edit_profile_specialty_text">Specialty</string>
    <string name="edit_profile_payment_method_text">Payment Method</string>
    <string name="edit_profile_security_text">Security</string>
    <string name="payment_options_fragment_save_changes_text">Save Changes</string>
    <string name="security_fragment_verified_information_text">Verified information</string>
    <string name="all_phone_number_text">Phone Number</string>
    <string name="security_fragment_0700000000_text">0700000000</string>
    <string name="secutity_fragment_password_text">Password</string>
    <string name="security_fragment_change_password_text">Change Password</string>
    <string name="security_fragment_old_password_text">Old Password</string>
    <string name="security_fragment_new_password_text">New Password</string>
    <string name="ola_machiavelli">Ola Machiavelli</string>
    <string name="dashboard_recyclerview_location_lagos">Lagos</string>
    <string name="string_dashboardhome_recyclerview_initials_om">OM</string>
    <string name="dashboard_home_initials">OM</string>
    <string name="dashboard_home_recyclerview_location_marker">Location marker</string>
    <string name="drawer_layout_menu_subscription_item_title">Subscription</string>
    <string name="drawer_layout_menu_resource_item_title">Resources</string>
    <string name="drawer_layout_menu_clients_item_title">Clients</string>
    <string name="drawer_layout_menu_logout_item_title">Logout</string>
    <string name="resource_article_image_description">Image of an Article</string>
    <string name="resource_article_text_title">Stitching neatly</string>
    <string name="resource_article_text_author">By Nathan Maro</string>
</resources>