<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/clients"
            android:title="@string/drawer_layout_menu_clients_item_title"
            android:id="@+id/clientsListFragment"
            />

        <item
            android:icon="@drawable/resources"
            android:title="@string/drawer_layout_menu_resource_item_title"
            android:id="@+id/resourceFragment"

            />
        <item
            android:icon="@drawable/subscription"
            android:title="@string/drawer_layout_menu_subscription_item_title"
            android:id="@+id/suscriptionFragment"
            />

        <item
            android:icon="@drawable/logout"
            android:title="@string/drawer_layout_menu_logout_item_title"
            android:id="@+id/logoutFragment"

            />

    </group>
</menu>