<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_blank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.profilemanagement.ClientAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18dp"
            android:hint="@string/fragment_tablayout_account_name_edit_text"
            android:textSize="@dimen/text_size_15sp"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/navy_blue" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:hint="@string/fragment_tablayout_client_account_phone_number_edit_text"
            android:textSize="@dimen/text_size_15sp"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/navy_blue" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:hint="@string/fragment_tablayout_client_account_email_address_hint_edit_text"
            android:textSize="@dimen/text_size_15sp"
            android:fontFamily="@font/poppins"
            android:textColorHint="@color/navy_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:orientation="horizontal"
            android:weightSum="@dimen/weight_sum_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/fragment_tablayout_client_account_gender_text_view"
                android:textSize="@dimen/text_size_15sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/navy_blue"
                />

            <RadioGroup
                android:id="@+id/fragment_clients_list_gender_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|top"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_clients_list_male_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/deep_sky_blue"
                    android:text="@string/fragment_tablayout_client_account_male_hint_radio_button_text"
                    android:textSize="@dimen/text_size_15sp"
                    android:textAllCaps="false"
                    android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

                <RadioButton
                    android:id="@+id/fragment_clients_list_female_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/deep_sky_blue"
                    android:text="@string/fragment_client_account_radion_female_text"
                    android:textSize="@dimen/text_size_15sp"
                    android:textAllCaps="false"
                    android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            </RadioGroup>
        </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_44dp"
            android:gravity="top|left"
            android:fontFamily="@font/poppins"
            android:hint="@string/fragment_client_account_delivery_address_hint_text_edit_text"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textSize="@dimen/text_size_15sp"
            android:textColorHint="@color/navy_blue"
            android:textDirection="ltr" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:backgroundTint="@color/deep_sky_blue"
            android:text="@string/fragment_client_account_next_button_text"
            android:textSize="@dimen/text_size_15sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/margin_7dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>


