<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profilemanagement.EditProfileFragment">


    <TextView
        android:id="@+id/fragment_edit_profile_edit_profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_edit_profile_text"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/fragment_edit_profile_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_profile_edit_profile_textview"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/deep_sky_blue"
        app:tabIndicatorGravity="bottom"
        app:tabInlineLabel="true"
        app:tabMode="auto"
        app:tabPaddingEnd="@dimen/margin_15dp"
        app:tabPaddingStart="@dimen/padding_30dp"
        app:tabSelectedTextColor="@color/deep_sky_blue"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:tabTextColor="@color/drawer_menu_item_textcolor">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_account_text" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_specialty_text" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_payment_method_text" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_security_text" />
    </com.google.android.material.tabs.TabLayout>





    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_edit_profile_view_pager"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_profile_tablayout">


    </androidx.viewpager2.widget.ViewPager2>



</androidx.constraintlayout.widget.ConstraintLayout>