<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/resources_article_imageview"
        android:layout_width="106dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/resources_article_background"
        android:contentDescription="@string/resource_article_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resources_article_stitching_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resource_article_text_title"
        android:textSize="@dimen/text_size_11sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/menu_text_color"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resources_article_imageview" />

    <TextView
        android:id="@+id/resources_article_author_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_article_text_author"
        android:textSize="@dimen/text_size_10sp"
        android:fontFamily="@font/poppins"
        android:textFontWeight="400"
        android:textColor="@color/menu_text_color"
        app:layout_constraintTop_toBottomOf="@id/resources_article_stitching_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"/>

</androidx.constraintlayout.widget.ConstraintLayout>